Fix: 모바일에서 searchWrapper로 인한 overflow 문제 해결

--- a/app/header/styles/HeaderPres.module.scss
+++ b/app/header/styles/HeaderPres.module.scss
@@ -177,6 +177,10 @@
 }
 
 @media (max-width:768px) {
+  html,body {
+    width: 100%;
+    overflow-x: hidden;
+  }
   .logo {
     width: 5rem;
     height: 5rem;
